# EnforceFlux

./: .gitignore  Makefile  README.md  pyproject.toml
apps/: analysis_common.py  analysis_instrument.py  analysis_main.py  analysis_main.yaml  analysis_simulation.py  flux_helpers.py  flux_inputs.py  flux_main.py  flux_main.yaml  flux_outputs.py  instrument_main.py  instrument_main.yaml  met_april_week.yaml  met_main.py  met_main.yaml  simulation_main.py  simulation_main.yaml  transport_main.py  transport_main.yaml
docs/: flexpart_build.md
examples/: aermod_single_source_demo.py  build_matched_met.py  diffuse_source_comparison.py  era5_driven_models.py  flexpart_forward_sac_fine.yaml  flexpart_forward_sacramento_march31.yaml  flexpart_forward_sacramento_matched.yaml  gaussian_plume_single_source_demo.py  gaussian_plume_single_source_sacramento.yaml  instrument_operator_demo.py  matched_forcing_comparison.py  microhh_open_path_operator.py  microhh_paddy_animation.py  microhh_point_vs_diffuse.py  microhh_reference.yaml  microhh_sacramento.yaml  microhh_sacramento_demo.py  microhh_sacramento_demo.yaml  microhh_sacramento_diurnal.py  microhh_sacramento_era5.yaml  microhh_vs_flexpart_vs_gaussian.py  osse_25kg_leak.yaml  osse_25kg_leak_demo.py  plot_open_path_timeseries.py  quickstart.py  quickstart_config.json  run_simulation_example.py  sacramento_convective_compare.yaml  sacramento_diurnal_24h.yaml  sacramento_paddy_surface_flux.yaml  sacramento_ricepaddy_24h.yaml  sacramento_valley_2020.py  sacval_april_2020.yaml  sacval_july_2020.yaml  simulation_config.yaml  simulation_test.yaml  single_source_instrument_backward.yaml  single_source_instrument_backward_500m.yaml  single_source_instrument_backward_april.yaml  single_source_instrument_backward_april2.yaml  (+4 more)
installations/flexpart/: makefile_gfortran
installations/microhh/: enforceflux.cmake
src/enforceflux/: __init__.py  cli.py  config.py  metrics.py  osse.py
src/enforceflux/aermod/: __init__.py  config.py  dispersion.py  meteorology.py  model.py  output.py
src/enforceflux/analysis/: __init__.py  _viz_base.py  information.py  information_ablation.py  information_core.py  information_models.py  metrics.py  optimal_estimation.py  optimal_linear.py  optimal_models.py  optimal_nonlinear.py  visualization.py  visualization_diagnostics.py  visualization_simulation.py  visualization_static.py  wind_rose.py
src/enforceflux/backend/: __init__.py  paths.py  unit_emission_runner.py
src/enforceflux/cli/: __init__.py  main.py
src/enforceflux/core/: __init__.py  base.py
src/enforceflux/flexpart/: __init__.py  backward.py  build.py  ec_operator.py  runner.py  sim_config.py  simulation.py  sources.py  wrapper.py
src/enforceflux/flux/: __init__.py  eddy_covariance.py  flux_gradient.py  inversion_estimator.py
tests/: test_aermod.py  test_config.py  test_eddy_covariance.py  test_flexpart_backward.py  test_flexpart_ec_operator.py  test_flexpart_runner.py  test_flexpart_simulation.py  test_instrument_operator.py  test_inversion.py  test_meteo_adapters.py  test_open_path.py  test_plugins.py  test_transport_run.py  test_transport_simulation.py
(+51 files in other folders)
